2012-08-16

	* src/headerview.[ch]: added tooltips of header labels.

2012-08-15

	* libsylph/prefs_common.[ch]
	  src/messageview.c
	  src/prefs_common_dialog.c: added an option to specify the position
	  of attach tool button.

2012-08-08

	* src/main.c: enabled viewing of external rfc822 message files.
	  Recognize mailto: or file: URL argument without command-line option.

2012-07-27

	* version 3.3.0beta1

2012-07-27

	* src/export.c: pass the opened FolderItem when 'Export only selected
	  messages' is enabled.

2012-07-27

	* libsylph/folder.[ch]
	  libsylph/mbox.c: added interface to cancel mbox import/export.
	* src/export.c
	  src/import.c: made export/import progress dialog cancellable.

2012-07-27

	* libsylph/mbox.[ch]
	  src/export.c: added 'Export only selected messages' option to
	  the export dialog.

2012-07-26

	* src/messageview.c: enable quick launch from the attach tool menu.

2012-07-26

	* src/prefs_common_dialog.c: moved Images option in Display - Attach
	  tab.

2012-07-25

	* libsylph/prefs_common.[ch]
	  src/messageview.[ch]
	  src/textview.c
	  src/prefs_common_dialog.c
	  src/mainwindow.c: added "show_attached_files_first" global option,
	  which shows attached files first on message view.
	  The UI for "show_attach_tab" option was also added.
	  The attachment toggle button was moved to the left.
	  messageview_reflect_prefs(): added.

2012-07-04

	* config.rpath
	  install-sh
	  ABOUT-NLS: updated.

2012-07-03

	* libsylph/imap.c: imap_cmd_fetch_func(): made response parser more
	  robust (fixes [sylpheed:35306] can't fetch message error).

2012-06-25

	* version 3.2.0

2012-06-25

	* src/Makefile.am: possible fix for gmodule link error on some
	  environments (#74).
	* libsylph/*.[ch]
	  src/*.[ch]
	  src/version.h.in: updated copyright year.

2012-06-20

	* src/icons/clip.xpm: replaced the clip icon with more visible one
	  on selected row.
	* src/summaryview.c: adjusted the width of the attach column.

2012-06-20

	* README