@@ -1,6 +1,6 @@
 /*
  * Sylpheed -- a GTK+ based, lightweight, and fast e-mail client
- * Copyright (C) 1999-2008 Hiroyuki Yamamoto
+ * Copyright (C) 1999-2012 Hiroyuki Yamamoto
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -25,6 +25,7 @@
 #include <gtk/gtkitemfactory.h>
 #include <gtk/gtktexttag.h>
 #include <gtk/gtkliststore.h>
+#include <gtk/gtktooltips.h>
 
 typedef struct _Compose		Compose;
 typedef struct _AttachInfo	AttachInfo;
@@ -198,6 +199,8 @@ struct _Compose
 	gboolean window_maximized;
 
 	gboolean block_modified;
+
+	GtkTooltips *toolbar_tip;
 };
 
 struct _AttachInfo
