@@ -1,5 +1,11 @@
 2012-08-16
 
+	* src/compose.c
+	  src/mainwindow.c: removed redundant gtk_tooltips_new() and destroy
+	  GtkTooltips object on close.
+
+2012-08-16
+
 	* src/headerview.[ch]: added tooltips of header labels.
 
 2012-08-15
